--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -31,6 +31,19 @@
   overflow-x: hidden;
 }
 
+.section::before {
+  content: '';
+  position: absolute;
+  width:1455px;
+  height: 601px;
+  border-radius: 0 0 0 200px;
+  background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
+  top: 0;
+  left: 66%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
 .content {
   width: 100vw;
   height: 1336px;
