--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -185,7 +185,7 @@
   line-height: normal;
   background-color: #000000;
   border-radius: 50px;
-  padding: 8px 20px 12px 120px;
+  padding: 8px 20px 12px 20px;
   margin-left: 38%;
 }
 
@@ -287,20 +287,6 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-left: -7%;
-}
-
-.scheduleItem {
-  width: 416px;
-  height: 308px;
-  flex-shrink: 0;
-  border-radius: 10px 0;
-  border: 1px solid #d9d9d9;
-  background-color: #ffffff;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
-  transition: box-shadow 0.3s ease;
 }
 
 .threeDots {
@@ -1262,6 +1248,9 @@
   flex-direction: column;
   margin-bottom: 20px;
   transition: box-shadow 0.3s ease;
+  flex-shrink: 0;
+  border-radius: 10px 0;
+  cursor: pointer;
 }
 
 .hoverMenu {
