홈화면 추가 구축 시작

--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -183,7 +183,6 @@
   margin-bottom: 20px;
 }
 
-.onBoardChooseBtnMore,
 .onBoardNoChooseBtn,
 .onBoardChooseBtn {
   width: 90px;
@@ -202,14 +201,8 @@
   color: #ffffff;
 }
 
-.onBoardChooseBtnMore {
-  float: right;
-  margin-right: 85px;
-}
-
 .onBoardChooseBtn:hover,
-.onBoardNoChooseBtn:hover,
-.onBoardChooseBtnMore:hover {
+.onBoardNoChooseBtn:hover {
   background-color: #d0d0d0;
 }
 
