--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -5,18 +5,6 @@
   position: relative;
 }
 
-.onBoard::before {
-  content: '';
-  position: absolute;
-  width: 1455px;
-  height: 601px;
-  border-radius: 0 0 0 200px;
-  background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
-  top: 10%;
-  left: 20%;
-  z-index: -1;
-}
-
 .onBoardingTop {
   margin: 0;
   padding: 0;
@@ -27,7 +15,7 @@
 
 .onBoardingImg {
   width: 100vw;
-  height: 610px;
+  height: 550px;
   display: inline-block;
   object-fit: cover;
   margin: 0;
@@ -45,13 +33,13 @@
 }
 
 .onBoardingExplainDiv {
-  top: 20%;
   font-size: 37px;
   font-weight: 800;
+  margin-top:-360px;
 }
 
 .onBoardingExplainP {
-  top: 33%;
+  bottom:85px;
   font-size: 25px;
   font-weight: 500;
 }
@@ -65,7 +53,7 @@
 
 .onBoardingSearch {
   width: 100%;
-  max-width: 725px;
+  max-width: 1025px;
   height: 74px;
   flex-shrink: 0;
   border-radius: 20px;
@@ -74,8 +62,8 @@
   display: flex;
   align-items: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  margin-right: 50px;
+  margin-top:1%;
+  margin-left: 10%;
 }
 
 .filterSelect {
@@ -147,16 +135,58 @@
   margin-bottom: 10px;
 }
 
-.viewBtn:hover {
-  background-color: #f5f5f5;
+.viewBtnSchedule, .viewBtnTravel {
+  width: 345px;
+  height: 237px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 30px 0px;
+  position: relative;
+  overflow: hidden;
+  transition: background 0.3s ease, color 0.3s ease;
+  cursor: pointer;
+}
+
+.viewBtnSchedule:hover {
+  background: #76ADAC;
+  color: #f5f5f5;
+}
+
+.viewBtnTravel:hover {
+  background: #74A5DA;
+  color: #f5f5f5;
+}
+
+.viewBtnSchedule:hover .iconContainer img,
+.viewBtnTravel:hover .iconContainer img {
+  filter: brightness(0) invert(1);
+}
+
+.viewBtnSchedule:hover .goLink img,
+.viewBtnTravel:hover .goLink img {
+  filter: none !important;
+}
+
+.viewBtnSchedule:hover .viewTitle,
+.viewBtnTravel:hover .viewTitle {
+  color: #f5f5f5 !important;
+  transition: color 0.3s ease;
+}
+
+.viewTitleSmall {
+  margin-left:40px;
+  font-size: 16px;
+  line-height:20px;
+  width: 250px;
+  height:70px;
 }
 
 .buttonContainer {
   display: flex;
   align-items: center;
   gap: 15px;
-  margin-top: 40px;
-  margin-right: 30px;
+  margin-top:-80px;
+  margin-left: 50%;
 }
 
 .onBoardingShow {
@@ -168,8 +198,10 @@
 }
 
 .recommendedDestinations {
+  width:1296px;
   text-align: left;
   margin-top: 76px;
+  margin-left: 20%;
 }
 
 .chooseRecomend {
@@ -211,7 +243,7 @@
   flex: 1;
   width: 90%;
   max-width: 400px;
-  height: 433px;
+  height:350px;
   border-radius: 0 0 30px 0;
   background: #ffffff;
   text-align: center;
@@ -234,7 +266,7 @@
   width: 100%;
   max-width: 400px;
   height:auto;
-  min-height: 230px;
+  min-height: 195px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -314,7 +346,7 @@
 .onBoardingContent {
   width: 100%;
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -334,6 +366,7 @@
 }
 
 .viewTitle {
+  margin-top:15px;
   margin-left: 41px;
   color: #555;
   font-family:
@@ -345,8 +378,58 @@
   line-height: normal;
 }
 
+.viewTitle:hover {
+  color: #f0f2f5;
+}
+
 .iconContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.homepageSearchLayout {
+  width: 1297px;
+  height: 102px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.40);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  left: 15%;
+}
+
+.onBoardingButtonLayout {
+  width: 1610px;
+  height: 382px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 100px 0px;
+  background: #F7F8FB;
+  margin-top: 156px;
+  margin-left: -290px;
+}
+
+.textContent {
+  color: #000;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 505;
+  line-height: 60px; /* 230.769% */
+  letter-spacing: 1.3px;
+  margin-top: 50px;
+  /*margin-left:25px;*/
+}
+
+.textSchedule {
+  width: 51px;
+  height: 30px;
+  flex-shrink: 0;
+  background: rgba(150, 200, 199, 0.50);
+}
+
+.textTravel {
+  width: 78px;
+  height: 30px;
+  flex-shrink: 0;
+  background: rgba(158, 199, 244, 0.50);
 }
