--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -217,6 +217,10 @@
   margin-bottom: 20px;
 }
 
+.onBoardChips {
+  margin-left:42px;
+}
+
 .onBoardNoChooseBtn,
 .onBoardChooseBtn {
   width: 90px;
@@ -230,7 +234,6 @@
 }
 
 .onBoardChooseBtn {
-  margin-left: 49px;
   background: #a7cdcc;
   color: #ffffff;
 }
@@ -254,9 +257,7 @@
 }
 
 .sliderImg {
-  width:295px;
-  height:203px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 30px 0 0 0;
 }
 
@@ -293,7 +294,7 @@
   line-height: normal;
   margin-top: 5px;
   text-align: left;
-  margin-left: 30px;
+  margin-left: 15px;
   display: flex;
   align-items: center;
 }
@@ -414,7 +415,6 @@
   line-height: 60px; /* 230.769% */
   letter-spacing: 1.3px;
   margin-top: 50px;
-  /*margin-left:25px;*/
 }
 
 .textSchedule, .textEtc {
@@ -434,4 +434,16 @@
   flex-shrink: 0;
   background: rgba(158, 199, 244, 0.50);
   margin-left:10px;
+}
+
+.noData {
+  margin-top: 30px;
+  margin-left:44px;
+  height:353px;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 25px;
+  text-align: center;
+  align-content: center;
+  color:#f0f2f5;
+  background-color : #555;
 }
