--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -257,7 +257,9 @@
 }
 
 .sliderImg {
-  object-fit: contain;
+  width:100%;
+  height:203px;
+  object-fit: cover;
   border-radius: 30px 0 0 0;
 }
 
