일정 조회 시 프로필 이미지 찌그러짐 현상 제거

--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -156,6 +156,7 @@
   position: absolute;
   width: 95px;
   height: 95px;
+  object-fit: contain;
   top: 0;
   left: 165px;
   background: #ffffff;
