--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -33,7 +33,7 @@
 }
 
 .homeHeader {
-  background-image: url('../../public/assets/images/메인화면/ocean_header.png');
+  /* background-image: url('../../public/assets/images/메인화면/ocean_header.png'); */
   border-bottom: 3px solid rgb(255, 255, 255);
 }
 
@@ -53,6 +53,7 @@
 
 .navLink,
 .navLogin {
+  color:black;
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
@@ -101,9 +102,5 @@
 }
 
 .homeNavLink {
-  color: #fff;
-}
-
-.otherNavLink {
   color: #000;
 }
