--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -9,11 +9,11 @@
 }
 
 .loginContainer {
-  margin-top: 82px;
+  margin-top: 41px;
   width: 756px;
   height: 814px;
   flex-shrink: 0;
-  border-radius: 0px 0px 0px 200px;
+  border-radius: 30px 0px;
   background: #ffffff;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
   display: flex;
