--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -12,6 +12,7 @@
   height: 702px;
   margin: 50px 0 0 312px;
   background: #ffffff;
+  border-radius: 30px 0px;
   box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.3);
 }
 
