--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -132,12 +132,13 @@
 
 .time,
 .travel {
-  margin-left: 160px;
+  margin-left: 230px;
   object-fit: cover;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .viewBtnSchedule, .viewBtnTravel {
+  background-color:#ffffff;
   width: 345px;
   height: 237px;
   display: flex;
@@ -147,6 +148,7 @@
   overflow: hidden;
   transition: background 0.3s ease, color 0.3s ease;
   cursor: pointer;
+  z-index:2;
 }
 
 .viewBtnSchedule:hover {
@@ -159,19 +161,14 @@
   color: #f5f5f5;
 }
 
-.viewBtnSchedule:hover .iconContainer img,
-.viewBtnTravel:hover .iconContainer img {
-  filter: brightness(0) invert(1);
-}
-
 .viewBtnSchedule:hover .goLink img,
 .viewBtnTravel:hover .goLink img {
-  filter: none !important;
+  filter: none;
 }
 
 .viewBtnSchedule:hover .viewTitle,
 .viewBtnTravel:hover .viewTitle {
-  color: #f5f5f5 !important;
+  color: #f5f5f5;
   transition: color 0.3s ease;
 }
 
