비밀번호 재설정, alert 처리, 비밀번호 찾기, 아이디 찾기 진행

--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -53,6 +53,12 @@
   position: relative;
 }
 
+.textPlain {
+  margin-left:40px;
+  margin-top: -25px;
+  width:100vw;
+}
+
 .input {
   width: 480px;
   max-width: 480px;
