--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -981,6 +981,7 @@
   margin-left: 200px;
   font-size: 24px;
   margin-bottom: 5px;
+  margin-top:36px;
 }
 
 .totalCount {
@@ -995,6 +996,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background: #fff;
+  margin-top:22px;
 }
 
 .listContainer {
