사이즈는 그대로, alert 처리 실행

--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -170,7 +170,6 @@
 }
 
 .alert {
-  margin-top: 20px;
   padding: 15px;
   width: 480px;
   border-radius: 5px;
@@ -182,12 +181,14 @@
   background-color: #d4edda;
   color: #155724;
   border: 1px solid #c3e6cb;
+  width:450px;
 }
 
 .alertError {
   background-color: #f8d7da;
   color: #721c24;
   border: 1px solid #f5c6cb;
+  width:450px;
 }
 
 .hint {
