--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -9,14 +9,17 @@
 }
 
 .pageContainer {
-  width: 619px;
-  height: 673px;
+  margin-top: 41px;
+  width: 756px;
+  height: 814px;
   flex-shrink: 0;
+  border-radius: 30px 0px;
+  background: #ffffff;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
+  margin-left: 37%;
 }
 
 .tabContainer {
@@ -181,14 +184,14 @@
   background-color: #d4edda;
   color: #155724;
   border: 1px solid #c3e6cb;
-  width:450px;
+  width: 450px;
 }
 
 .alertError {
   background-color: #f8d7da;
   color: #721c24;
   border: 1px solid #f5c6cb;
-  width:450px;
+  width: 450px;
 }
 
 .hint {
@@ -216,31 +219,4 @@
 
 .submitButton.disabledButton:hover {
   background-color: #ccc;
-}
-
-.userIdText {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #000;
-  text-align: center;
-  font-family:
-    Noto Sans KR,
-    sans-serif;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.userIdExplain {
-  color: #848282;
-  font-family:
-    Noto Sans KR,
-    sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
 }
