--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -35,15 +35,15 @@
 .onBoardingExplainDiv {
   font-size: 37px;
   font-weight: 800;
-  margin-top:-360px;
-  margin-left:200px;
+  margin-top: -360px;
+  margin-left: 200px;
 }
 
 .onBoardingExplainP {
-  bottom:85px;
+  bottom: 85px;
   font-size: 25px;
   font-weight: 500;
-  margin-left:200px;
+  margin-left: 200px;
 }
 
 .onBoardingView {
@@ -64,7 +64,7 @@
   display: flex;
   align-items: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-top:1%;
+  margin-top: 1%;
   margin-left: 10%;
 }
 
@@ -137,8 +137,9 @@
   margin-bottom: 20px;
 }
 
-.viewBtnSchedule, .viewBtnTravel {
-  background-color:#ffffff;
+.viewBtnSchedule,
+.viewBtnTravel {
+  background-color: #ffffff;
   width: 345px;
   height: 237px;
   display: flex;
@@ -146,18 +147,20 @@
   border-radius: 30px 0px;
   position: relative;
   overflow: hidden;
-  transition: background 0.3s ease, color 0.3s ease;
+  transition:
+    background 0.3s ease,
+    color 0.3s ease;
   cursor: pointer;
-  z-index:2;
+  z-index: 2;
 }
 
 .viewBtnSchedule:hover {
-  background: #76ADAC;
+  background: #76adac;
   color: #f5f5f5;
 }
 
 .viewBtnTravel:hover {
-  background: #74A5DA;
+  background: #74a5da;
   color: #f5f5f5;
 }
 
@@ -173,18 +176,18 @@
 }
 
 .viewTitleSmall {
-  margin-left:40px;
+  margin-left: 40px;
   font-size: 16px;
-  line-height:20px;
+  line-height: 20px;
   width: 250px;
-  height:70px;
+  height: 70px;
 }
 
 .buttonContainer {
   display: flex;
   align-items: center;
   gap: 15px;
-  margin-top:-80px;
+  margin-top: -80px;
   margin-left: 50%;
 }
 
@@ -197,7 +200,7 @@
 }
 
 .recommendedDestinations {
-  width:1366px;
+  width: 1366px;
   text-align: left;
   margin-top: 76px;
   margin-left: 12%;
@@ -215,7 +218,7 @@
 }
 
 .onBoardChips {
-  margin-left:42px;
+  margin-left: 42px;
 }
 
 .onBoardNoChooseBtn,
@@ -243,8 +246,8 @@
 .imgSliderContainer {
   margin-top: 39px;
   flex: 1;
-  width:295px;
-  height:351px;
+  width: 295px;
+  height: 351px;
   border-radius: 0 0 30px 0;
   background: #ffffff;
   text-align: center;
@@ -254,8 +257,8 @@
 }
 
 .sliderImg {
-  width:100%;
-  height:203px;
+  width: 100%;
+  height: 203px;
   object-fit: cover;
   border-radius: 30px 0 0 0;
 }
@@ -263,7 +266,7 @@
 .noImage {
   position: relative;
   width: 295px;
-  height:203px;
+  height: 203px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -363,7 +366,7 @@
 }
 
 .viewTitle {
-  margin-top:15px;
+  margin-top: 15px;
   margin-left: 41px;
   color: #555;
   font-family:
@@ -390,7 +393,7 @@
   height: 102px;
   flex-shrink: 0;
   border-radius: 20px;
-  background: rgba(255, 255, 255, 0.40);
+  background: rgba(255, 255, 255, 0.4);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.25);
   position: absolute;
   left: 15%;
@@ -401,7 +404,7 @@
   height: 382px;
   flex-shrink: 0;
   border-radius: 0px 0px 100px 0px;
-  background: #F7F8FB;
+  background: #f7f8fb;
   margin-top: 156px;
   margin-left: -290px;
 }
@@ -416,33 +419,34 @@
   margin-top: 50px;
 }
 
-.textSchedule, .textEtc {
+.textSchedule,
+.textEtc {
   width: 51px;
   height: 30px;
   flex-shrink: 0;
-  margin-left:270px;
+  margin-left: 270px;
 }
 
 .textSchedule {
-  background: rgba(150, 200, 199, 0.50);
+  background: rgba(150, 200, 199, 0.5);
 }
 
 .textTravel {
   width: 78px;
   height: 30px;
   flex-shrink: 0;
-  background: rgba(158, 199, 244, 0.50);
-  margin-left:10px;
+  background: rgba(158, 199, 244, 0.5);
+  margin-left: 10px;
 }
 
 .noData {
   margin-top: 30px;
-  margin-left:44px;
-  height:353px;
+  margin-left: 44px;
+  height: 353px;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 25px;
   text-align: center;
   align-content: center;
-  color:#f0f2f5;
-  background-color : #555;
+  color: #f0f2f5;
+  background-color: #555;
 }
