로고 하단 이미지 높이 변경

--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -75,9 +75,8 @@
 }
 
 .logoImg {
-  width: 183px;
-  height: 55px;
-  flex-shrink: 0;
+  max-width: 183px;
+  height: auto;
   margin-top: 40px;
   margin-left: 125px;
 }
