--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -19,10 +19,11 @@
 /* 일정 만들기를 위한 모달창 */
 .modalOverlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  inset : 0;
+  /*top: 0;*/
+  /*left: 0;*/
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
