소셜 로그인 멘트 추가 , 중복 css 교정

--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -483,19 +483,6 @@
   border: none;
 }
 
-.cancelBtn {
-  width: 81px;
-  height: 47px;
-  margin-left: 10px;
-  background-color: #f5f5f5;
-  color: #333;
-  font-size: 15px;
-  font-weight: 700;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-}
-
 .nicknameEditContainer {
   width: fit-content;
   display: flex;
@@ -722,18 +709,6 @@
   border: none;
 }
 
-.cancelBtn {
-  width: 81px;
-  height: 47px;
-  background-color: #f5f5f5;
-  color: #333333;
-  font-size: 15px;
-  font-weight: 700;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-}
-
 .editBtn {
   width: 100px;
   height: 47px;
@@ -821,7 +796,6 @@
   color: #ffffff;
   font-size: 15px;
   font-weight: 700;
-  border-radius: 5px;
   cursor: pointer;
   border: none;
 }
@@ -829,11 +803,11 @@
 .cancelBtn {
   width: 81px;
   height: 47px;
+  margin-left: 10px;
   background-color: #f5f5f5;
-  color: #333333;
+  color: #333;
   font-size: 15px;
   font-weight: 700;
-  border-radius: 5px;
   cursor: pointer;
   border: none;
 }
@@ -855,7 +829,7 @@
 .requestBtn {
   width: 100px;
   height: 47px;
-  background-color: #76adac;
+  background-color: #f5f5f5;
   color: #ffffff;
   font-size: 15px;
   font-weight: 700;
@@ -866,11 +840,10 @@
 .verifyBtn {
   width: 100px;
   height: 47px;
-  background-color: #76adac;
+  border:1px solid #76adac;
   color: #ffffff;
   font-size: 15px;
   font-weight: 700;
-  border: none;
   cursor: pointer;
 }
 
