--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,17 +1,19 @@
 .main {
   color: #000000;
-  width: 100vw;
+  width: 100%;
   flex-shrink: 0;
   backdrop-filter: blur(2px);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .header {
   display: flex;
   align-items: center;
-  height: 91px;
+  height: auto;
+  min-height: 70px;
   flex-shrink: 0;
   border-bottom: 1px solid #c4c4c4;
   background: #ffffff;
@@ -27,15 +29,17 @@
   flex: 1;
   display: flex;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
 .section::before {
   content: '';
   position: absolute;
-  width: 1455px;
-  height: 701px;
+  width: 100%;
+  max-width: 1455px;
+  height: 50vh;
+  max-height: 701px;
   border-radius: 0 0 0 200px;
   background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
   top: 0;
@@ -45,16 +49,18 @@
 }
 
 .content {
-  width: 100vw;
-  height: 1336px;
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
   flex-grow: 1;
 }
 
 .footer {
-  margin-top: 55px;
-  padding-top: 5px;
-  width: 100vw;
-  height: 324px;
+  margin-top: 3rem;
+  padding: 2rem 0;
+  width: 100%;
+  height: auto;
+  min-height: 250px;
   flex-shrink: 0;
   background: #363636;
   overflow-y: hidden;
@@ -65,10 +71,10 @@
 .email,
 .github,
 .copyright {
-  margin-left: 135px;
+  margin-left: 8%;
   color: #ffffff;
   font-family: 'Noto Sans KR', serif;
-  font-size: 17px;
+  font-size: 1.1rem;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
@@ -76,16 +82,96 @@
 
 .logoImg {
   max-width: 183px;
+  width: 40%;
   height: auto;
-  margin-top: 40px;
-  margin-left: 125px;
+  margin-top: 2rem;
+  margin-left: 8%;
 }
 
 .logoText {
-  font-size: 35px;
+  font-size: 2.2rem;
   font-family: 'Noto Sans KR', serif;
   font-weight: 500;
   flex-shrink: 0;
   color: #ffffff;
   margin-top: 0;
+}
+
+/* 반응형 미디어 쿼리 */
+@media screen and (max-width: 992px) {
+  .section::before {
+    left: 60%;
+    height: 45vh;
+  }
+  
+  .logoImg,
+  .logoText,
+  .email,
+  .github,
+  .copyright {
+    margin-left: 5%;
+  }
+  
+  .logoImg {
+    margin-left: 5%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    min-height: 60px;
+  }
+  
+  .section::before {
+    left: 50%;
+    border-radius: 0 0 0 100px;
+    height: 40vh;
+  }
+  
+  .footer {
+    min-height: 200px;
+  }
+  
+  .logoText {
+    font-size: 1.8rem;
+  }
+  
+  .logoImg,
+  .logoText,
+  .email,
+  .github,
+  .copyright {
+    font-size: 1rem;
+    margin-left: 5%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .section::before {
+    border-radius: 0 0 0 50px;
+    height: 30vh;
+  }
+  
+  .footer {
+    min-height: 180px;
+    padding: 1.5rem 0;
+  }
+  
+  .logoImg {
+    max-width: 140px;
+    margin-top: 1rem;
+  }
+  
+  .logoText {
+    font-size: 1.5rem;
+  }
+  
+  .logoImg,
+  .logoText,
+  .email,
+  .github,
+  .copyright {
+    font-size: 0.9rem;
+    margin-left: 1rem;
+  }
 }
