--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -558,8 +558,8 @@
 }
 
 .inputGroup {
-  width: 480px;
-  max-width: 480px;
+  width: 100%;
+  min-width: 480px;
   height: auto;
   flex-shrink: 0;
   margin-bottom: 15px;
