--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -151,47 +151,43 @@
 }
 
 .scheduleExplainDiv {
-  top: 20%;
+  position: static;
+  margin: 0 0 10px 0;
+  font-size: 32px;
   font-weight: 800;
+  line-height: 1.2;
   color: #ffffff;
-  text-align: center;
-  justify-content: center;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 15px;
-  margin-left: 36%;
+  text-align: left;
+  justify-content: flex-start;
 }
 
 .scheduleExplainP {
-  top: 35%;
+  position: static;
+  margin: 0 0 24px 0;
   font-size: 20px;
   font-weight: 500;
-  text-align: center;
-  justify-content: center;
-  margin-left: 29%;
+  line-height: 1.5;
+  color: #ffffff;
+  text-align: left;
+  justify-content: flex-start;
 }
 
 .createAddButton {
-  top: 80%;
-  display: flex;
-  width: 338px;
-  height: 57px;
-  flex-direction: column;
-  text-align: center;
-  flex-shrink: 0;
+  position: static;
+  margin: 0;
+  width: 220px;
+  height: 48px;
+  font-size: 18px;
+  border-radius: 30px;
+  padding: 0;
   color: #ffffff;
-  font-size: 20px;
-  font-style: normal;
+  background-color: #000000;
   font-weight: 600;
   line-height: normal;
-  background-color: #000000;
-  border-radius: 50px;
-  padding: 8px 20px 12px 20px;
-  margin-left: 38%;
 }
 
 .createContainer {
-  margin-left: 10%;
+  margin: 0 auto;
   width: 1296px;
   height: fit-content;
 }
@@ -200,10 +196,11 @@
 .scheduleCounterShare {
   display: inline-flex;
   align-items: center;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 700;
   word-wrap: break-word;
-  margin: 77px 100px 17px -80px;
+  margin: 0 20px 0 0;
+  padding: 10px 24px;
 }
 
 .scheduleCounter .counterNumber,
@@ -243,18 +240,21 @@
 
 .scheduleView {
   display: flex;
+  align-items: center;
   position: relative;
 }
 
 .scheduleText {
   flex: 1;
-  text-align: center;
-  color: #ffffff;
-  padding-right: 40px;
+  color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 50%;
+  align-items: flex-start;
+  text-align: left;
+  padding-left: 60px;
+  z-index: 2;
+  max-width: 600px;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -1188,29 +1188,29 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-top: -57px;
-  margin-bottom: 17px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   gap: 10px;
 }
 
 .travelSearchContainer input {
-  width: 471px;
-  height: 30px;
+  width: 320px;
+  height: 36px;
   font-size: 16px;
   border-radius: 10px;
   background-color: #ffffff;
   border: 1px solid #cccccc;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
-  margin-right: -40px;
+  margin-right: 0;
 }
 
 .scheduleList {
   margin-top: 40px;
+  margin-left: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  margin-left: -6%;
 }
 
 .scheduleItem {
