--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -41,7 +41,7 @@
 .headerContent {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 95%;
   z-index: 1;
   height: 100%;
@@ -54,6 +54,7 @@
   align-items: center;
   height: 100%;
   flex-wrap: wrap;
+  margin-left: auto;
 }
 
 .navLink,
